--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gemini-vercel-chatbot",
   "version": "1.0.0",
   "dependencies": {
-    "@google/genai": "^0.14.2"
+    "@google/genai": "latest"
   },
   "type": "module"
 }
